[gd_scene load_steps=2 format=3 uid="uid://c6vumewgnfquy"]

[ext_resource type="Script" path="res://addons/block_code/ui/block_canvas/block_canvas.gd" id="1_tk8h2"]

[node name="BlockCanvas" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_tk8h2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[node name="WindowScroll" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Window" type="Control" parent="WindowScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="ChooseBlockCodeLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Choose a BlockCode node in the inspector."
horizontal_alignment = 1

[node name="CreateBlockCodeLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "First, add a BlockCode node to the scene."
horizontal_alignment = 1
